include/maplibre_native_c/map.h


typedef struct mln_map_options {
  uint32_t size;
  uint32_t width;
  uint32_t height;
  double scale_factor;
  uint32_t map_mode;
  bool fast_pfor_enabled;
} mln_map_options;
typedef struct mln_screen_point {
  double x;
  double y;
} mln_screen_point;
typedef struct mln_edge_insets {
  double top;
  double left;
  double bottom;
  double right;
} mln_edge_insets;
typedef struct mln_camera_options {
  uint32_t size;
  uint32_t fields;
  double latitude;
  double longitude;
  double center_altitude;
  mln_edge_insets padding;
  mln_screen_point anchor;
  double zoom;
  double bearing;
  double pitch;
  double roll;
  double field_of_view;
} mln_camera_options;
typedef struct mln_unit_bezier {
  double x1;
  double y1;
  double x2;
  double y2;
} mln_unit_bezier;
typedef struct mln_animation_options {
  uint32_t size;
  uint32_t fields;
  double duration_ms;
  double velocity;
  double min_zoom;
  mln_unit_bezier easing;
  uint64_t transition_id;
} mln_animation_options;
typedef struct mln_camera_fit_options {
  uint32_t size;
  uint32_t fields;
  mln_edge_insets padding;
  double bearing;
  double pitch;
} mln_camera_fit_options;
typedef struct mln_vec3 {
  double x;
  double y;
  double z;
} mln_vec3;
typedef struct mln_quaternion {
  double x;
  double y;
  double z;
  double w;
} mln_quaternion;
typedef struct mln_free_camera_options {
  uint32_t size;
  uint32_t fields;
  mln_vec3 position;
  mln_quaternion orientation;
} mln_free_camera_options;
typedef struct mln_lat_lng {
  double latitude;
  double longitude;
} mln_lat_lng;
typedef struct mln_string_view {
  const char* data;
  size_t size;
} mln_string_view;
typedef struct mln_geometry mln_geometry;
typedef struct mln_coordinate_span {
  const mln_lat_lng* coordinates;
  size_t coordinate_count;
} mln_coordinate_span;
typedef struct mln_polygon_geometry {
  const mln_coordinate_span* rings;
  size_t ring_count;
} mln_polygon_geometry;
typedef struct mln_multi_line_geometry {
  const mln_coordinate_span* lines;
  size_t line_count;
} mln_multi_line_geometry;
typedef struct mln_multi_polygon_geometry {
  const mln_polygon_geometry* polygons;
  size_t polygon_count;
} mln_multi_polygon_geometry;
typedef struct mln_geometry_collection {
  const mln_geometry* geometries;
  size_t geometry_count;
} mln_geometry_collection;
typedef struct mln_geometry {
  uint32_t size;
  uint32_t type;
  union {
    mln_lat_lng point;
    mln_coordinate_span line_string;
    mln_polygon_geometry polygon;
    mln_coordinate_span multi_point;
    mln_multi_line_geometry multi_line_string;
    mln_multi_polygon_geometry multi_polygon;
    mln_geometry_collection geometry_collection;
  } data;
} mln_geometry;
typedef struct mln_lat_lng_bounds {
  mln_lat_lng southwest;
  mln_lat_lng northeast;
} mln_lat_lng_bounds;
typedef struct mln_bound_options {
  uint32_t size;
  uint32_t fields;
  mln_lat_lng_bounds bounds;
  double min_zoom;
  double max_zoom;
  double min_pitch;
  double max_pitch;
} mln_bound_options;
typedef struct mln_projection_mode {
  uint32_t size;
  uint32_t fields;
  bool axonometric;
  double x_skew;
  double y_skew;
} mln_projection_mode;
typedef struct mln_map_viewport_options {
  uint32_t size;
  uint32_t fields;
  uint32_t north_orientation;
  uint32_t constrain_mode;
  uint32_t viewport_mode;
  mln_edge_insets frustum_offset;
} mln_map_viewport_options;
typedef struct mln_map_tile_options {
  uint32_t size;
  uint32_t fields;
  uint32_t prefetch_zoom_delta;
  double lod_min_radius;
  double lod_scale;
  double lod_pitch_threshold;
  double lod_zoom_shift;
  uint32_t lod_mode;
} mln_map_tile_options;
MLN_API mln_status mln_map_create(
  mln_runtime runtime, const mln_map_options* options, mln_map* out_map
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_get_size(
  mln_map map, uint32_t* out_width, uint32_t* out_height,
  double* out_scale_factor
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_destroy(mln_map map) MLN_NOEXCEPT;
MLN_API mln_status mln_map_copy_loaded_style_json(
  mln_map map, char* out_json, size_t json_capacity, size_t* out_json_size
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_copy_style_url(
  mln_map map, char* out_url, size_t url_capacity, size_t* out_url_size
) MLN_NOEXCEPT;