include/maplibre_native_c/camera.h


MLN_API mln_status
mln_map_get_debug_options(mln_map map, uint32_t* out_options) MLN_NOEXCEPT;
MLN_API mln_status mln_map_get_rendering_stats_view_enabled(
  mln_map map, bool* out_enabled
) MLN_NOEXCEPT;
MLN_API mln_status
mln_map_is_fully_loaded(mln_map map, bool* out_loaded) MLN_NOEXCEPT;
MLN_API mln_status mln_map_dump_debug_logs(mln_map map) MLN_NOEXCEPT;
MLN_API mln_status mln_map_get_viewport_options(
  mln_map map, mln_map_viewport_options* out_options
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_get_tile_options(
  mln_map map, mln_map_tile_options* out_options
) MLN_NOEXCEPT;
MLN_API mln_status
mln_map_get_camera(mln_map map, mln_camera_options* out_camera) MLN_NOEXCEPT;
MLN_API mln_status mln_map_ease_to(
  mln_map map, const mln_camera_options* camera,
  const mln_animation_options* animation
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_fly_to(
  mln_map map, const mln_camera_options* camera,
  const mln_animation_options* animation
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_cancel_transitions(mln_map map) MLN_NOEXCEPT;
MLN_API mln_status
mln_map_is_gesture_in_progress(mln_map map, bool* out_in_progress) MLN_NOEXCEPT;
MLN_API mln_status mln_map_camera_for_lat_lng_bounds(
  mln_map map, mln_lat_lng_bounds bounds,
  const mln_camera_fit_options* fit_options, mln_camera_options* out_camera
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_camera_for_lat_lngs(
  mln_map map, const mln_lat_lng* coordinates, size_t coordinate_count,
  const mln_camera_fit_options* fit_options, mln_camera_options* out_camera
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_camera_for_geometry(
  mln_map map, mln_buffer_view geometry,
  const mln_camera_fit_options* fit_options, mln_camera_options* out_camera
) MLN_NOEXCEPT;
MLN_API mln_status
mln_map_get_bounds(mln_map map, mln_bound_options* out_options) MLN_NOEXCEPT;
MLN_API mln_status mln_map_get_free_camera_options(
  mln_map map, mln_free_camera_options* out_options
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_get_projection_mode(
  mln_map map, mln_projection_mode* out_mode
) MLN_NOEXCEPT;