bindings/dart/lib/src/internal/c/maplibre_native_c.g.dart


@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    mln_string_view,
    mln_string_view,
    ffi.Pointer<mln_style_tile_source_options>,
  )
>()
external int mln_map_add_vector_source_url(
  int map,
  mln_string_view source_id,
  mln_string_view url,
  ffi.Pointer<mln_style_tile_source_options> options,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    ffi.Pointer<mln_geometry>,
    ffi.Pointer<mln_camera_fit_options>,
    ffi.Pointer<mln_camera_options>,
  )
>()
external int mln_map_camera_for_geometry(
  int map,
  ffi.Pointer<mln_geometry> geometry,
  ffi.Pointer<mln_camera_fit_options> fit_options,
  ffi.Pointer<mln_camera_options> out_camera,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    mln_lat_lng_bounds,
    ffi.Pointer<mln_camera_fit_options>,
    ffi.Pointer<mln_camera_options>,
  )
>()
external int mln_map_camera_for_lat_lng_bounds(
  int map,
  mln_lat_lng_bounds bounds,
  ffi.Pointer<mln_camera_fit_options> fit_options,
  ffi.Pointer<mln_camera_options> out_camera,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    ffi.Pointer<mln_lat_lng>,
    ffi.Size,
    ffi.Pointer<mln_camera_fit_options>,
    ffi.Pointer<mln_camera_options>,
  )
>()
external int mln_map_camera_for_lat_lngs(
  int map,
  ffi.Pointer<mln_lat_lng> coordinates,
  int coordinate_count,
  ffi.Pointer<mln_camera_fit_options> fit_options,
  ffi.Pointer<mln_camera_options> out_camera,
);

@ffi.Native<ffi.Int32 Function(mln_map)>()
external int mln_map_cancel_transitions(int map);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    mln_string_view,
    ffi.Pointer<ffi.Char>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int mln_map_copy_layer_source_id(
  int map,
  mln_string_view layer_id,
  ffi.Pointer<ffi.Char> out_source_id,
  int source_id_capacity,
  ffi.Pointer<ffi.Size> out_source_id_size,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    mln_string_view,
    ffi.Pointer<ffi.Char>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int mln_map_copy_layer_source_layer(
  int map,
  mln_string_view layer_id,
  ffi.Pointer<ffi.Char> out_source_layer,
  int source_layer_capacity,
  ffi.Pointer<ffi.Size> out_source_layer_size,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    ffi.Pointer<ffi.Char>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int mln_map_copy_loaded_style_json(
  int map,
  ffi.Pointer<ffi.Char> out_json,
  int json_capacity,
  ffi.Pointer<ffi.Size> out_json_size,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    mln_string_view,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
    ffi.Pointer<ffi.Bool>,
  )
>()
external int mln_map_copy_style_image_premultiplied_rgba8(
  int map,
  mln_string_view image_id,
  ffi.Pointer<ffi.Uint8> out_pixels,
  int pixel_capacity,
  ffi.Pointer<ffi.Size> out_byte_length,
  ffi.Pointer<ffi.Bool> out_found,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    mln_string_view,
    ffi.Pointer<mln_image_stretch>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
    ffi.Pointer<mln_image_stretch>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
    ffi.Pointer<ffi.Bool>,
  )
>()
external int mln_map_copy_style_image_stretches(
  int map,
  mln_string_view image_id,
  ffi.Pointer<mln_image_stretch> out_stretch_x,
  int stretch_x_capacity,
  ffi.Pointer<ffi.Size> out_stretch_x_count,
  ffi.Pointer<mln_image_stretch> out_stretch_y,
  int stretch_y_capacity,
  ffi.Pointer<ffi.Size> out_stretch_y_count,
  ffi.Pointer<ffi.Bool> out_found,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    mln_string_view,
    ffi.Pointer<ffi.Char>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
    ffi.Pointer<ffi.Bool>,
  )
>()
external int mln_map_copy_style_source_attribution(
  int map,
  mln_string_view source_id,
  ffi.Pointer<ffi.Char> out_attribution,
  int attribution_capacity,
  ffi.Pointer<ffi.Size> out_attribution_size,
  ffi.Pointer<ffi.Bool> out_found,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    mln_string_view,
    ffi.Pointer<ffi.Char>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
    ffi.Pointer<ffi.Bool>,
  )
>()
external int mln_map_copy_style_source_url(
  int map,
  mln_string_view source_id,
  ffi.Pointer<ffi.Char> out_url,
  int url_capacity,
  ffi.Pointer<ffi.Size> out_url_size,
  ffi.Pointer<ffi.Bool> out_found,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    ffi.Pointer<ffi.Char>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int mln_map_copy_style_url(
  int map,
  ffi.Pointer<ffi.Char> out_url,
  int url_capacity,
  ffi.Pointer<ffi.Size> out_url_size,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_runtime,
    ffi.Pointer<mln_map_options>,
    ffi.Pointer<mln_map>,
  )
>()
external int mln_map_create(
  int runtime,
  ffi.Pointer<mln_map_options> options,
  ffi.Pointer<mln_map> out_map,
);

@ffi.Native<ffi.Int32 Function(mln_map)>()
external int mln_map_destroy(int map);

@ffi.Native<ffi.Int32 Function(mln_map)>()
external int mln_map_dump_debug_logs(int map);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    ffi.Pointer<mln_camera_options>,
    ffi.Pointer<mln_animation_options>,
  )
>()
external int mln_map_ease_to(
  int map,
  ffi.Pointer<mln_camera_options> camera,
  ffi.Pointer<mln_animation_options> animation,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    ffi.Pointer<mln_camera_options>,
    ffi.Pointer<mln_animation_options>,
  )
>()
external int mln_map_fly_to(
  int map,
  ffi.Pointer<mln_camera_options> camera,
  ffi.Pointer<mln_animation_options> animation,
);

@ffi.Native<ffi.Int32 Function(mln_map, ffi.Pointer<mln_bound_options>)>()
external int mln_map_get_bounds(
  int map,
  ffi.Pointer<mln_bound_options> out_options,
);

@ffi.Native<ffi.Int32 Function(mln_map, ffi.Pointer<mln_camera_options>)>()
external int mln_map_get_camera(
  int map,
  ffi.Pointer<mln_camera_options> out_camera,
);

@ffi.Native<ffi.Int32 Function(mln_map, ffi.Pointer<ffi.Uint32>)>()
external int mln_map_get_debug_options(
  int map,
  ffi.Pointer<ffi.Uint32> out_options,
);

@ffi.Native<ffi.Int32 Function(mln_map, ffi.Pointer<mln_free_camera_options>)>()
external int mln_map_get_free_camera_options(
  int map,
  ffi.Pointer<mln_free_camera_options> out_options,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    mln_string_view,
    ffi.Pointer<mln_lat_lng>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
    ffi.Pointer<ffi.Bool>,
  )
>()
external int mln_map_get_image_source_coordinates(
  int map,
  mln_string_view source_id,
  ffi.Pointer<mln_lat_lng> out_coordinates,
  int coordinate_capacity,
  ffi.Pointer<ffi.Size> out_coordinate_count,
  ffi.Pointer<ffi.Bool> out_found,
);

@ffi.Native<
  ffi.Int32 Function(mln_map, mln_string_view, ffi.Pointer<mln_json_snapshot>)
>()
external int mln_map_get_layer_filter(
  int map,
  mln_string_view layer_id,
  ffi.Pointer<mln_json_snapshot> out_filter,
);

@ffi.Native<
  ffi.Int32 Function(mln_map, mln_string_view, ffi.Pointer<ffi.Double>)
>()
external int mln_map_get_layer_max_zoom(
  int map,
  mln_string_view layer_id,
  ffi.Pointer<ffi.Double> out_max_zoom,
);

@ffi.Native<
  ffi.Int32 Function(mln_map, mln_string_view, ffi.Pointer<ffi.Double>)
>()
external int mln_map_get_layer_min_zoom(
  int map,
  mln_string_view layer_id,
  ffi.Pointer<ffi.Double> out_min_zoom,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    mln_string_view,
    mln_string_view,
    ffi.Pointer<mln_json_snapshot>,
  )
>()
external int mln_map_get_layer_property(
  int map,
  mln_string_view layer_id,
  mln_string_view property_name,
  ffi.Pointer<mln_json_snapshot> out_value,
);

@ffi.Native<
  ffi.Int32 Function(mln_map, mln_string_view, ffi.Pointer<ffi.Uint32>)
>()
external int mln_map_get_layer_visibility(
  int map,
  mln_string_view layer_id,
  ffi.Pointer<ffi.Uint32> out_visibility,
);

@ffi.Native<ffi.Int32 Function(mln_map, ffi.Pointer<mln_projection_mode>)>()
external int mln_map_get_projection_mode(
  int map,
  ffi.Pointer<mln_projection_mode> out_mode,
);

@ffi.Native<ffi.Int32 Function(mln_map, ffi.Pointer<ffi.Bool>)>()
external int mln_map_get_rendering_stats_view_enabled(
  int map,
  ffi.Pointer<ffi.Bool> out_enabled,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    ffi.Pointer<ffi.Uint32>,
    ffi.Pointer<ffi.Uint32>,
    ffi.Pointer<ffi.Double>,
  )
>()
external int mln_map_get_size(
  int map,
  ffi.Pointer<ffi.Uint32> out_width,
  ffi.Pointer<ffi.Uint32> out_height,
  ffi.Pointer<ffi.Double> out_scale_factor,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    mln_string_view,
    ffi.Pointer<mln_style_image_info>,
    ffi.Pointer<ffi.Bool>,
  )
>()
external int mln_map_get_style_image_info(
  int map,
  mln_string_view image_id,
  ffi.Pointer<mln_style_image_info> out_info,
  ffi.Pointer<ffi.Bool> out_found,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    mln_string_view,
    ffi.Pointer<mln_json_snapshot>,
    ffi.Pointer<ffi.Bool>,
  )
>()
external int mln_map_get_style_layer_json(
  int map,
  mln_string_view layer_id,
  ffi.Pointer<mln_json_snapshot> out_layer,
  ffi.Pointer<ffi.Bool> out_found,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    mln_string_view,
    ffi.Pointer<mln_string_view>,
    ffi.Pointer<ffi.Bool>,
  )
>()
external int mln_map_get_style_layer_type(
  int map,
  mln_string_view layer_id,
  ffi.Pointer<mln_string_view> out_layer_type,
  ffi.Pointer<ffi.Bool> out_found,
);

@ffi.Native<
  ffi.Int32 Function(mln_map, mln_string_view, ffi.Pointer<mln_json_snapshot>)
>()
external int mln_map_get_style_light_property(
  int map,
  mln_string_view property_name,
  ffi.Pointer<mln_json_snapshot> out_value,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    mln_string_view,
    ffi.Pointer<mln_style_source_info>,
    ffi.Pointer<ffi.Bool>,
  )
>()
external int mln_map_get_style_source_info(
  int map,
  mln_string_view source_id,
  ffi.Pointer<mln_style_source_info> out_info,
  ffi.Pointer<ffi.Bool> out_found,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    mln_string_view,
    ffi.Pointer<mln_style_string_list>,
    ffi.Pointer<ffi.Bool>,
  )
>()
external int mln_map_get_style_source_tile_urls(
  int map,
  mln_string_view source_id,
  ffi.Pointer<mln_style_string_list> out_tile_urls,
  ffi.Pointer<ffi.Bool> out_found,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    mln_string_view,
    ffi.Pointer<ffi.Uint32>,
    ffi.Pointer<ffi.Bool>,
  )
>()
external int mln_map_get_style_source_type(
  int map,
  mln_string_view source_id,
  ffi.Pointer<ffi.Uint32> out_source_type,
  ffi.Pointer<ffi.Bool> out_found,
);

@ffi.Native<
  ffi.Int32 Function(mln_map, ffi.Pointer<mln_style_transition_options>)
>()
external int mln_map_get_style_transition_options(
  int map,
  ffi.Pointer<mln_style_transition_options> out_options,
);

@ffi.Native<ffi.Int32 Function(mln_map, ffi.Pointer<mln_map_tile_options>)>()
external int mln_map_get_tile_options(
  int map,
  ffi.Pointer<mln_map_tile_options> out_options,
);

@ffi.Native<
  ffi.Int32 Function(mln_map, ffi.Pointer<mln_map_viewport_options>)
>()
external int mln_map_get_viewport_options(
  int map,
  ffi.Pointer<mln_map_viewport_options> out_options,
);

@ffi.Native<ffi.Int32 Function(mln_map, mln_string_view, mln_lat_lng_bounds)>()
external int mln_map_invalidate_custom_geometry_source_region(
  int map,
  mln_string_view source_id,
  mln_lat_lng_bounds bounds,
);

@ffi.Native<
  ffi.Int32 Function(mln_map, mln_string_view, mln_canonical_tile_id)
>()
external int mln_map_invalidate_custom_geometry_source_tile(
  int map,
  mln_string_view source_id,
  mln_canonical_tile_id tile_id,
);

@ffi.Native<ffi.Int32 Function(mln_map, ffi.Pointer<ffi.Bool>)>()
external int mln_map_is_fully_loaded(int map, ffi.Pointer<ffi.Bool> out_loaded);

@ffi.Native<ffi.Int32 Function(mln_map, ffi.Pointer<ffi.Bool>)>()
external int mln_map_is_gesture_in_progress(
  int map,
  ffi.Pointer<ffi.Bool> out_in_progress,
);
